feat: add entity and neighbor-order oracle parity
- support entity actions, fields, inventory probes, and GameTest mappings.
- compare probe and neighbor-update samples through the oracle v2 protocol.
- align item pickup delay with vanilla semantics and add differential coverage.
- update oracle documentation and remaining BUD test tracking.